--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #353b48;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Open Sans', sans-serif, Arial;
+}
+
+/* unvisited link */
+a:link {
+  color: #7f8fa6;
+}
+
+/* visited link */
+a:visited {
+  color: #7f8fa6;
+}
+
+/* mouse over link */
+a:hover {
+  color: #487eb0;
+  text-decoration: None;
+}
+
+/* selected link */
+a:active {
+  color: #40739e;
 }
