--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -58,7 +58,7 @@
   /* Individual item */
   .bm-item {
     display: inline-block;
-    color: #ffffff; 
+    color: #f5f6fa; 
     font-family: 'Open Sans', sans-serif, Arial;
     text-decoration: None;
     box-shadow: None;
